@@ -4,6 +4,13 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2007/02/07
+	* Removed old script bonuses bMatk, bMatk1, bMatk2.
+	* Fixed char-server not sending online notification when a party member
+	  logs in.
+	* When skill range by distance is set, the distance checked for is now 5
+	  cells rather than 3.
+	* Fixed bMatkRate bonuses not applying to status earned modifications to
+	  int/matk. [Skotlex]
 	* Removed deprecated console code.
 	* Moved CHAT_SIZE back to map.h because log_atcommand uses it on sql 
 	  builds. (moved to clif.c in r9811) [FlavioJS]
